# feira-da-troca

./: .gitignore  CLAUDE.md  Iniciar-Sistema.bat  README.md  docker-compose.yml  implementation.md  mkdocs.yml  vercel.json
.github/workflows/: release.yml
backend/: ouroboros.db  ouroboros.db-shm  ouroboros.db-wal  requirements.txt  test_api_flow.py  ws_test.html
backend-node/: .env.example  Dockerfile  README.md  manage.js  package-lock.json  package.json  smoke_test.js  stress_test.js
backend-node/src/: app.js  bootstrap.js  config.js  database.js  logger.js  models.js  utils.js
backend-node/tests/: concurrency.test.js  rest.test.js  services.test.js  utils.test.js  ws.test.js
backend-python/: .env.example  Dockerfile  README.md  bootstrap.py  build.bat  conftest.py  manage.py  ouroboros.db  requirements.txt  stress_test.py
backend-python/app/: config.py  database.py  logger.py  main.py  models.py  utils.py
backend-python/tests/: test_concurrency.py  test_rest.py  test_services.py  test_utils.py  test_ws.py
backend/app/: config.py  database.py  main.py
docs/: index.md
docs/api/: reference.md
docs/architecture/: adr-001.md  adr-002.md  adr-003.md  overview.md
docs/diagrams/: sequence.md
frontend/: .env.example  Dockerfile  analise-frontend-ouroboros.md  index.html  package-lock.json  package.json
launcher/: .gitignore  LAUNCHER.md  index.html  package.json  vite.config.js
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: main.rs
scripts/: backup.sh
(+57 files in other folders)
